plugins {
    id 'eclipse'
    id 'idea'
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
    id 'org.parchmentmc.librarian.forgegradle' version '1.+'
    id 'org.spongepowered.mixin' version '0.7+'
}

jarJar.enable()

group = 'com.lovetropics.donations'
base {
    archivesName = 'LTDonations'
}

ext.buildnumber = 0

project.buildnumber = System.getenv('BUILD_NUMBER') ?: 'custom'
if (System.getenv('GHA_RELEASE_WORKFLOW')) {
    version = "${mod_version}"
} else if (System.getenv('GITHUB_RUN_NUMBER')) {
    project.buildnumber = System.getenv('GITHUB_RUN_NUMBER')
    version = "${mod_version}-${release_type}+${buildnumber}-gha"
} else {
    project.buildnumber = System.getenv('BUILD_NUMBER') ?: 'custom'
    version = "${mod_version}-${release_type}+${buildnumber}"
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

minecraft {
    mappings channel: 'parchment', version: parchment_version

    runs {
        client {
        	taskName 'ltdonations_client'
            copyIdeResources = true

            workingDirectory project.file('run')

            property 'forge.logging.console.level', 'info'

            mods {
                ltdonations {
                    source sourceSets.main
                }
            }
        }

        server {
        	taskName 'ltdonations_server'
            copyIdeResources = true

            workingDirectory project.file('run')

            property 'forge.logging.console.level', 'info'

            mods {
                ltdonations {
                    source sourceSets.main
                }
            }
        }
        
        data {
        	taskName 'ltdonations_data'
            copyIdeResources = true

            workingDirectory project.file('run')
            
            environment 'target', 'fmluserdevdata'

            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            mods {
                ltdonations {
                    source sourceSets.main
                }
            }
            
			args '--mod', 'ltdonations', '--all', '--output', '"' + rootProject.file('src/generated/resources/') + '"',
				 '--existing', '"' + sourceSets.main.resources.srcDirs[0] + '"' 
			
        }
    }
}

sourceSets.main.resources {
	srcDir 'src/generated/resources'
}

repositories {
	mavenLocal()
}

repositories {
	maven { // Registrate
		url "https://maven.tterrag.com/"
	}
	mavenLocal()
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"

    jarJar(implementation(fg.deobf("com.tterrag.registrate:Registrate:$registrate_version"))) {
        jarJar.ranged(it, "[$registrate_version,MC1.21)")
    }

    jarJar(implementation(fg.deobf("com.lovetropics.lib:LTLib:${ltlib_version}"))) {
        jarJar.ranged(it, "[1.3,1.4)")
    }
}

tasks.jarJar.configure {
    archiveClassifier = ''
    finalizedBy 'reobfJarJar'
}

reobf {
    jarJar { }
}

jar {
    archiveClassifier = 'slim'

    manifest {
        attributes([
            "Specification-Title": "ltdonations",
            "Specification-Vendor": "lovetropics",
            "Specification-Version": "1", // We are version 1 of ourselves
            "Implementation-Title": project.name,
            "Implementation-Version": archiveVersion,
            "Implementation-Vendor" :"lovetropics",
            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

def resourceTargets = ['META-INF/mods.toml', 'pack.mcmeta']
def replaceProperties = [
        mod_version: mod_version,
]

processResources {
    inputs.properties replaceProperties
    replaceProperties.put 'project', project

    filesMatching(resourceTargets) {
        expand replaceProperties
    }
}
